# final_project

./: .gitignore  README.md  pyproject.toml
Alg1_Questions_By_Standard/: A.APR.A.1.OperationswithPolynomials2a.doc  A.APR.A.1.OperationswithPolynomials4a.doc  A.APR.B.3.GraphingPolynomialFunctions1.doc  A.CED.A.1.GeometricApplicationsofQuadratics1.doc  A.CED.A.1.ModelingLinearInequalities1a.doc  A.CED.A.2.GraphingLinearFunctions.doc  A.CED.A.2.ModelingLinearEquations.doc  A.CED.A.3.ModelingSystemsofLinearInequalities.doc  A.REI.B.3.InterpretingSolutions1.doc  A.REI.B.3.SolvingLinearEquations1a.doc  A.REI.B.4.SolvingQuadratics2a.doc  A.REI.B.4.SolvingQuadratics3.doc  A.REI.B.4.UsingtheDiscriminant1.doc  A.REI.C.6.SolvingLinearSystems1.doc  A.REI.C.7.Quadratic-LinearSystems1.doc  A.REI.D.11.OtherSystems1.doc  A.REI.D.12.GraphingSystemsofLinearInequalities1.doc  A.SSE.A.2.FactoringPolynomials1.doc  A.SSE.A.2.FactoringtheDifferenceofPerfectSquares1a.doc  A.SSE.A.2.FactoringtheDifferenceofPerfectSquares2.doc  A.SSE.B.3.ModelingExponentialFunctions1.doc  F.BF.A.1.OperationswithFunctions.doc  F.BF.B.3.GraphingAbsoluteValueFunctions.doc  F.BF.B.3.TransformationswithFunctions.doc  F.IF.A.2.FunctionalNotation1a.doc  F.IF.B.4.GraphingLinearFunctions.doc  F.IF.B.4.RelatingGraphstoEvents.doc  F.IF.B.6.RateofChange1.doc  F.IF.C.7.GraphingRootFunctions.doc  F.IF.C.8.VertexFormofaQuadratic.doc  F.LE.A.2.ModelingExponentialFunctions1.doc  F.LE.B.5.ModelingExponentialFunctions2.doc  F.LE.B.5.ModelingLinearFunctions.doc  N.Q.A.2.UsingRate1a.doc  N.RN.B.3.OperationswithRadicals1.doc  (+7 more)
(+66 files in other folders)
