[tool.poetry]
name = "Isaak Final Project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
